add_subdirectory(include)
add_subdirectory(lib)

# Expose to the parent scope
set(SWIG_INTERFACE_FILES ${SWIG_INTERFACE_FILES} PARENT_SCOPE)
set(SWIG_INCLUDE_FILES ${SWIG_INCLUDE_FILES} PARENT_SCOPE)
set(SWIG_INCLUDE_DIR ${SWIG_INCLUDE_DIR} PARENT_SCOPE)
set(SWIG_EXTRA_SOURCE_FILES ${SWIG_EXTRA_SOURCE_FILES} PARENT_SCOPE)
set(SWIG_EXTRA_HEADER_FILES ${SWIG_EXTRA_HEADER_FILES} PARENT_SCOPE)

